--- a/src/index.html
+++ b/src/index.html
@@ -77,140 +77,131 @@
         </div>
       </div>
      <div class="header-bottom">
-       <div class="container">
-         <nav class="header-nav">
-          <div class="header-nav-item">
-            <div class="trigger">
-              <div class="trigger-text">О нас</div>
-               <svg width="16" height="16" viewBox="0 0 16 16" fill="none" class="trigger-arrow">
-                <path d="M4 6L8 10L12 6" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-              </svg> 
-            </div>                        
+        <div class="container">         
+          <nav class="header-nav">
             <ul>
               <li>
                 <a href="#">
-                   О клинике
-                </a>               
-              </li>
-              <li>
-                <a href="#">
-                  Команда
-                </a>               
-              </li>
-              <li>
-                <a href="#">
-                  Оборудование
-                </a>               
-              </li>
-              <li>
-                <a href="#">
-                  Гарантии
-                </a>               
-              </li>
-              <li>
-                <a href="#">
-                  Вакансии
-                </a>               
-              </li>
-            </ul>
-          </div>
-          <div class="header-nav-item">
-            <div class="trigger">
-              <div class="trigger-text">Услуги</div>
-               <svg width="16" height="16" viewBox="0 0 16 16" fill="none" class="trigger-arrow">
-                <path d="M4 6L8 10L12 6" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-              </svg> 
-            </div>                        
-            <ul>
-              <li>
-                <div class="sub-menu-wrapper">
-                  <div class="sub-menu">
+                  О нас
+                  <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
+                    <path d="M4 6L8 10L12 6" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>                      
+                </a>
+                <ul>
+                  <li>
                     <a href="#">
-                      терапия
-                      <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        О клинике
+                    </a>               
+                  </li>
+                  <li>
+                    <a href="#">
+                      Команда
+                    </a>               
+                  </li>
+                  <li>
+                    <a href="#">
+                      Оборудование
+                    </a>               
+                  </li>
+                  <li>
+                    <a href="#">
+                      Гарантии
+                    </a>               
+                  </li>
+                  <li>
+                    <a href="#">
+                      Вакансии
+                    </a>               
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <a href="#">
+                  Услуги
+                  <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
+                    <path d="M4 6L8 10L12 6" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>  
+                </a>
+                <ul>
+                  <li>
+                    <a href="#">
+                      Терапия
+                      <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
                         <path d="M10 19C14.9706 19 19 14.9706 19 10C19 5.02944 14.9706 1 10 1C5.02944 1 1 5.02944 1 10C1 14.9706 5.02944 19 10 19Z" fill="#319DAC" stroke="#319DAC" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                         <path d="M10 6V14" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                         <path d="M6 10H14" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                       </svg> 
-                    </a>                                         
+                    </a>
                     <ul>
                       <li>
-                        <a href="#">лечение зубов</a>
+                        <a href="#">Лечение зубов</a>
                       </li>
                       <li>
-                        <a href="#">лечение кариеса</a>
+                        <a href="#">Лечение кариеса</a>
                       </li>
                       <li>
-                        <a href="#">лечение зубов под микроскопом</a>
+                        <a href="#">Лчение зубов под микроскопом</a>
                       </li>
                       <li>
-                        <a href="#">лечение пульпита</a>
+                        <a href="#">Лечение пульпита</a>
                       </li>
                       <li>
-                        <a href="#">реставрация зубов</a>
+                        <a href="#">Реставрация зубов</a>
                       </li>
                       <li>
-                        <a href="#">отбеливание</a>
+                        <a href="#">Отбеливание</a>
                       </li>
                       <li>
                         <a href="#">Профессиональная чистка зубов</a>
                       </li>                      
-                    </ul>    
-                  </div> 
-                </div>                
-              </li>
-              <li>
-                <div class="sub-menu-wrapper">
-                  <div class="sub-menu">
+                    </ul>  
+                  </li>
+                  <li>
                     <a href="#">
-                      хирургия
-                      <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      Хиругрия
+                      <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
                         <path d="M10 19C14.9706 19 19 14.9706 19 10C19 5.02944 14.9706 1 10 1C5.02944 1 1 5.02944 1 10C1 14.9706 5.02944 19 10 19Z" fill="#319DAC" stroke="#319DAC" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                         <path d="M10 6V14" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                         <path d="M6 10H14" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                       </svg> 
-                    </a>                                         
+                    </a>
                     <ul>
                       <li>
                         <a href="#">
-                          хирургия
+                          Хирургия
                         </a>
                       </li>
                       <li>
                         <a href="#">
-                          удаление зуба
+                          Удаление зуба
                         </a>
                       </li>
                       <li>
                         <a href="#">
-                          удаление зуба мудрости
+                          Удаление зуба мудрости
                         </a>
                       </li>
                       <li>
                         <a href="#">
-                          пластика десны
+                          Пластика десны
                         </a>
                       </li>
                       <li>
                         <a href="#">
-                          периостотомия, перикоронаротомия
+                          Периостотомия, перикоронаротомия
                         </a>
                       </li>
-                    </ul>    
-                  </div> 
-                </div>              
-              </li>
-              <li>
-                <div class="sub-menu-wrapper">
-                  <div class="sub-menu">
+                    </ul>  
+                  </li>
+                  <li>
                     <a href="#">
                       ортодонтия
-                      <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
                         <path d="M10 19C14.9706 19 19 14.9706 19 10C19 5.02944 14.9706 1 10 1C5.02944 1 1 5.02944 1 10C1 14.9706 5.02944 19 10 19Z" fill="#319DAC" stroke="#319DAC" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                         <path d="M10 6V14" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                         <path d="M6 10H14" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                       </svg> 
-                    </a>                                         
+                    </a>
                     <ul>
                       <li>
                         <a href="#">
@@ -232,21 +223,17 @@
                           детская ортодонтия
                         </a>
                       </li>
-                    </ul>    
-                  </div> 
-                </div>                                                           
-              </li>
-              <li>
-                <div class="sub-menu-wrapper">
-                  <div class="sub-menu">
+                    </ul>
+                  </li>
+                  <li>
                     <a href="#">
                       имплантация
-                      <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
                         <path d="M10 19C14.9706 19 19 14.9706 19 10C19 5.02944 14.9706 1 10 1C5.02944 1 1 5.02944 1 10C1 14.9706 5.02944 19 10 19Z" fill="#319DAC" stroke="#319DAC" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                         <path d="M10 6V14" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                         <path d="M6 10H14" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                      </svg> 
-                    </a>                                         
+                      </svg>
+                    </a>
                     <ul>
                       <li>
                         <a href="#">
@@ -293,21 +280,17 @@
                           имплантация зубов системой Roott
                         </a>
                       </li>
-                    </ul>    
-                  </div> 
-                </div>                  
-              </li>
-              <li>
-                <div class="sub-menu-wrapper">
-                  <div class="sub-menu">
+                    </ul>  
+                  </li>
+                  <li>
                     <a href="#">
                       протезирование
-                      <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
                         <path d="M10 19C14.9706 19 19 14.9706 19 10C19 5.02944 14.9706 1 10 1C5.02944 1 1 5.02944 1 10C1 14.9706 5.02944 19 10 19Z" fill="#319DAC" stroke="#319DAC" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                         <path d="M10 6V14" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                         <path d="M6 10H14" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                       </svg> 
-                    </a>                                         
+                    </a>
                     <ul>
                       <li>
                         <a href="#">
@@ -364,68 +347,77 @@
                           ацеталовые и бюгельные протезы
                         </a>
                       </li>
-                    </ul>    
-                  </div> 
-                </div>                  
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="#">
+                      3D-снимки зубов
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      Иностранным гражданам
+                    </a>
+                  </li>
+                </ul>
               </li>
               <li>
                 <a href="#">
-                  3D-снимки зубов
-                </a>               
+                  Цены
+                </a>
               </li>
               <li>
                 <a href="#">
-                  Иностранным гражданам
-                </a>               
-              </li>              
+                  Врачи
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  Работы
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  Отзывы
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  Иностранным Гражданам
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  Статьи
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  Контакты
+                </a>
+              </li>
             </ul>
-          </div>
-          <div class="header-nav-pages">
-            <ul>
-              <li>
-                <a href="#">Цены</a>
-              </li>
-              <li>
-                <a href="#">Врачи</a>
-              </li>
-              <li>
-                <a href="#">Работы</a>
-              </li>
-              <li>
-                <a href="#">Отзывы</a>
-              </li>
-              <li>
-                <a href="#">Иностранным Гражданам</a>
-              </li>
-              <li>
-                <a href="#">Статьи</a>
-              </li>
-              <li>
-                <a href="#">Контакты</a>
-              </li>
-            </ul>
-          </div>
-          <div class="header-nav-search">           
-            <svg width="32" height="32" viewBox="0 0 32 32" fill="none" class="search-icon">
-              <path d="M25.3333 14.6663C25.3333 17.613 24.14 20.2796 22.2093 22.209C20.4644 23.954 18.1684 25.04 15.7125 25.282C13.2566 25.5239 10.7928 24.9068 8.74084 23.5359C6.68891 22.1649 5.17583 20.1249 4.4594 17.7634C3.74297 15.4019 3.86752 12.865 4.81183 10.585C5.75614 8.30507 7.46178 6.42306 9.63813 5.25969C11.8145 4.09631 14.3269 3.72354 16.7473 4.2049C19.1677 4.68626 21.3463 5.99196 22.9119 7.89953C24.4775 9.8071 25.3332 12.1985 25.3333 14.6663V14.6663Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-              <path d="M27.9997 27.9997L22.209 22.209" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>
-            <div class="search-wrapper">
-              <div class="ui-field">
-                <input type="search" class="ui-input small">
-                <svg width="20" height="20" viewBox="0 0 20 20" fill="none" class="input-icon">
-                  <path d="M17 8.99972C17 11.2097 16.105 13.2097 14.657 14.6567C13.3483 15.9655 11.6263 16.78 9.78436 16.9615C7.94243 17.1429 6.09457 16.6801 4.55563 15.6519C3.01668 14.6237 1.88187 13.0936 1.34455 11.3225C0.807226 9.55139 0.900638 7.64875 1.60887 5.93878C2.3171 4.2288 3.59633 2.8173 5.2286 1.94476C6.86086 1.07223 8.74517 0.792658 10.5605 1.15368C12.3757 1.5147 14.0097 2.49397 15.1839 3.92465C16.3581 5.35533 16.9999 7.14888 17 8.99972V8.99972Z" stroke="#343544" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                  <path d="M18.9993 18.9993L14.6562 14.6562" stroke="#343544" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>                                                
+            <div class="header-nav-search">           
+              <svg width="26" height="26" viewBox="0 0 26 26" fill="none" class="search-icon">
+                <path d="M22.3333 11.6663C22.3333 14.613 21.14 17.2796 19.2093 19.209C17.4644 20.954 15.1684 22.04 12.7125 22.282C10.2566 22.5239 7.79277 21.9068 5.74084 20.5359C3.68891 19.1649 2.17583 17.1249 1.4594 14.7634C0.742968 12.4019 0.867518 9.865 1.81183 7.58503C2.75614 5.30507 4.46178 3.42306 6.63813 2.25969C8.81449 1.09631 11.3269 0.723544 13.7473 1.2049C16.1677 1.68626 18.3463 2.99196 19.9119 4.89953C21.4775 6.8071 22.3332 9.19851 22.3333 11.6663V11.6663Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M24.9997 24.9997L19.209 19.209" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>                  
+              <div class="search-wrapper">
+                <div class="ui-field">
+                  <input type="search" class="ui-input small">
+                  <svg width="20" height="20" viewBox="0 0 20 20" fill="none" class="input-icon">
+                    <path d="M17 8.99972C17 11.2097 16.105 13.2097 14.657 14.6567C13.3483 15.9655 11.6263 16.78 9.78436 16.9615C7.94243 17.1429 6.09457 16.6801 4.55563 15.6519C3.01668 14.6237 1.88187 13.0936 1.34455 11.3225C0.807226 9.55139 0.900638 7.64875 1.60887 5.93878C2.3171 4.2288 3.59633 2.8173 5.2286 1.94476C6.86086 1.07223 8.74517 0.792658 10.5605 1.15368C12.3757 1.5147 14.0097 2.49397 15.1839 3.92465C16.3581 5.35533 16.9999 7.14888 17 8.99972V8.99972Z" stroke="#343544" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M18.9993 18.9993L14.6562 14.6562" stroke="#343544" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>                                                
+                </div>
+                <svg width="32" height="32" viewBox="0 0 32 32" fill="none" class="close-icon">
+                  <path d="M8 7.51465L24.9706 24.4852" stroke="#343544" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  <path d="M8 24.4854L24.9706 7.51479" stroke="#343544" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
               </div>
-              <svg width="32" height="32" viewBox="0 0 32 32" fill="none" class="close-icon">
-                <path d="M8 7.51465L24.9706 24.4852" stroke="#343544" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                <path d="M8 24.4854L24.9706 7.51479" stroke="#343544" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-              </svg>
             </div>
-          </div>
-         </nav>              
-       </div>
+          </nav>
+        </div>
      </div>
     </header>
     <!-- header end -->
